Mostly fix Mac CMake build https://bugs.webkit.org/show_bug.cgi?id=230868

Patch by Alex Christensen <achristensen@webkit.org> on 2021-09-28
Reviewed by Don Olmstead.

Source/JavaScriptCore:

* shell/PlatformMac.cmake:

Source/ThirdParty/ANGLE:

* Compiler.cmake:
* Metal.cmake:

Source/ThirdParty/libwebrtc:

* CMakeLists.txt:

Source/WebCore:

* PlatformMac.cmake:
* platform/graphics/cg/ImageBufferUtilitiesCG.cpp:
(WebCore::encode):

Source/WebCore/PAL:

* pal/PlatformMac.cmake:

Source/WebKit:

* PlatformMac.cmake:

Source/WebKitLegacy:

* PlatformMac.cmake:

Source/WTF:

* wtf/PlatformMac.cmake:

Tools:

* DumpRenderTree/PlatformMac.cmake:
* DumpRenderTree/TestNetscapePlugIn/PlatformMac.cmake: Added.
* TestRunnerShared/PlatformMac.cmake: Added.

Canonical link: https://commits.webkit.org/242222@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@283174 268f45cc-cd09-0410-ab3c-d52691b4dbfc