Source/ThirdParty/ANGLE/Compiler.cmake
@@ -385,8 +385,6 @@ set(angle_translator_lib_metal_sources
     "src/compiler/translator/TranslatorMetalDirect/Reference.h"
     "src/compiler/translator/TranslatorMetalDirect/RewriteCaseDeclarations.cpp"
     "src/compiler/translator/TranslatorMetalDirect/RewriteCaseDeclarations.h"
-    "src/compiler/translator/TranslatorMetalDirect/RewriteGlobalQualifierDecls.cpp"
-    "src/compiler/translator/TranslatorMetalDirect/RewriteGlobalQualifierDecls.h"
     "src/compiler/translator/TranslatorMetalDirect/RewriteKeywords.cpp"
     "src/compiler/translator/TranslatorMetalDirect/RewriteKeywords.h"
     "src/compiler/translator/TranslatorMetalDirect/RewriteOutArgs.cpp"
